posts, admin controller

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -14,8 +14,15 @@ signUp.form.placeholder.email=Почта
 signUp.form.placeholder.password=Пароль
 signUp.form.placeholder.faculty_name=Факультет
 
+account.form.label.enterTitle=Введите ваше заголовок:
+account.form.placeholder.title=Заголовок
+account.form.label.enterText=Введите ваш текст:
+account.form.placeholder.text=Текст
+
 Validator=Пароль должен содержать заглавную букву и от 4-12 символов
 NotBlank=Заполните поле
 Size.firstName=Имя должно содержать от 2 до 20 символов
 Size.lastName=Фамилия должна содержать от 2 до 50 символов
+Size.title=Название должно содержать от 2 до 20 символов
+Size.text=Текст должен содержать от 2 до 500 символов
 Email=Неправильно набрана почта
