add query, update method

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -14,10 +14,12 @@ signUp.form.placeholder.email=Почта
 signUp.form.placeholder.password=Пароль
 signUp.form.placeholder.faculty_name=Факультет
 
-account.form.label.enterTitle=Введите ваше заголовок:
-account.form.placeholder.title=Заголовок
-account.form.label.enterText=Введите ваш текст:
-account.form.placeholder.text=Текст
+accountDto.form.label.enterFirstName=Введите ваше имя:
+accountDto.form.label.enterLastName=Введите вашу фамилию:
+accountDto.form.label.enterPassword=Введите ваш пароль:
+accountDto.form.placeholder.firstName=Имя
+accountDto.form.placeholder.lastName=Фамилия
+accountDto.form.placeholder.password=Пароль
 
 Validator=Пароль должен содержать заглавную букву и от 4-12 символов
 NotBlank=Заполните поле
