add css, class entity and some fix

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -1,6 +1,5 @@
 signUp.page.title=Регистрация
-signUp.page.header=Страница входа
-signUp.page.description=Введите ваши данные:
+signUp.page.header=Регистрация
 
 signUp.form.label.enterFirstName=Введите ваше имя:
 signUp.form.label.enterLastName=Введите вашу фамилию:
@@ -14,14 +13,15 @@ signUp.form.placeholder.email=Почта
 signUp.form.placeholder.password=Пароль
 signUp.form.placeholder.faculty_name=Факультет
 
-accountDto.form.label.enterFirstName=Введите ваше имя:
-accountDto.form.label.enterLastName=Введите вашу фамилию:
-accountDto.form.label.enterPassword=Введите ваш пароль:
-accountDto.form.placeholder.firstName=Имя
-accountDto.form.placeholder.lastName=Фамилия
-accountDto.form.placeholder.password=Пароль
+account.form.label.enterFirstName=Введите ваше имя:
+account.form.label.enterLastName=Введите вашу фамилию:
+account.form.label.enterPassword=Введите ваш пароль:
+account.form.placeholder.firstName=Имя
+account.form.placeholder.lastName=Фамилия
+account.form.placeholder.password=Пароль
 
 Validator=Пароль должен содержать заглавную букву и от 4-12 символов
+ValidEmail=Пользователь с данной почтой уже зарегистрирован 
 NotBlank=Заполните поле
 Size.firstName=Имя должно содержать от 2 до 20 символов
 Size.lastName=Фамилия должна содержать от 2 до 50 символов
